src/test/deca/codegen/valid/created/Objet/print_Method.deca
// Description:
//    test lorsque une méthode doit s'afficher 
//
// Resultats:
//    1
//
// Historique:
//    cree le 21/01/2022

class A {
    int i = 1 ;
    int get(){
        return this.i ;
    }
}



{   
    
    A a = new A();

    println(a.get()) ;

    

}
