src/test/deca/codegen/invalid/created/objet/Dereferenced_null2.deca
// Description:
//    test de déréférencement du pointeur NULL
//
// Resultats:
//    
//
// Historique:
//    cree le 21/01/2022

class A {
    int i = 1 ;
    int get(){
        return this.i;
    }
}

class B {
    A a ;
}

{   
    B b = new B();
    println(b.a.get()) ;
}
